--- a/styles/aboutUs.css
+++ b/styles/aboutUs.css
@@ -1,3 +1,18 @@
-h1{
-    margin-top: 40vh;
+div #start{
+    font-size: 150px;
+    margin: 200px 0;
+    text-align: center;
+}
+
+#arrow{
+    width: 100px;
+    margin-bottom: 100px;
+}
+
+.profile{
+    border: solid black 1px;
+}
+
+footer{
+    position: sticky;
 }
