--- a/styles/whySello.css
+++ b/styles/whySello.css
@@ -1,3 +1,15 @@
+div #start{
+    font-size: 150px;
+    margin: 200px 0;
+    text-align: center;
+}
+
+#arrow{
+    width: 100px;
+    margin-bottom: 100px;
+}
+
+
 .animated{
     display: none;
 }
@@ -13,6 +25,46 @@ img{
     -o-animation: fadeInTop 1.5s both;
     display: block;
 }
+
+.sidenav {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: #111;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+  }
+  
+  .sidenav a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+  }
+  
+  .sidenav a:hover {
+    color: #f1f1f1;
+  }
+  
+  .sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+    margin-top: 100px;
+  }
+  
+  #main {
+    transition: margin-left .5s;
+    padding: 16px;
+  }
 
 @keyframes fadeInTop{
     0%{
@@ -60,6 +112,14 @@ img{
 
 .animated h1{
     font-size: 60px;
+}
+
+#intro{
+    margin-bottom: 250px;
+}
+
+#head3{
+    margin-top: 250px;
 }
 
 footer{
