--- a/styles/community.css
+++ b/styles/community.css
@@ -9,18 +9,22 @@ div #start{
     margin-bottom: 100px;
 }
 
+.animated{
+    visibility: hidden;
+}
+
 .fadeInTop{
     animation: fadeInTop 1.5s both;
     -webkit-animation: fadeInTop 1.5s both;
     -moz-animation: fadeInTop 1.5s both;
     -o-animation: fadeInTop 1.5s both;
-    display: block;
+    visibility: visible;
 }
 
 @keyframes fadeInTop{
     0%{
         opacity: 0;
-        transform: translateY(75px);
+        transform: translateY(0px);
     }
     100%{
         opacity: 1;
@@ -31,7 +35,7 @@ div #start{
 @-webkit-keyframes fadeInTop{
     0%{
         opacity: 0;
-        -webkit-transform: translateY(-75px);
+        -webkit-transform: translateY(0px);
     }
     100%{
         opacity: 1;
@@ -42,7 +46,7 @@ div #start{
 @-moz-keyframes fadeInTop{
     0%{
         opacity: 0;
-        -moz-transform: translateY(-75px);
+        -moz-transform: translateY(0px);
     }
     100%{
         opacity: 1;
@@ -53,7 +57,7 @@ div #start{
 @-o-keyframes fadeInTop{
     0%{
         opacity: 0;
-        -o-transform: translateY(-75px);
+        -o-transform: translateY(0px);
     }
     100%{
         opacity: 1;
