--- a/styles/whySello.css
+++ b/styles/whySello.css
@@ -11,7 +11,7 @@ div #start{
 
 
 .animated{
-    display: none;
+    visibility: hidden;
 }
 
 img{
@@ -23,7 +23,14 @@ img{
     -webkit-animation: fadeInTop 1.5s both;
     -moz-animation: fadeInTop 1.5s both;
     -o-animation: fadeInTop 1.5s both;
-    display: block;
+    visibility: visible;
+}
+
+#tri{
+    float: left;
+    margin-left: 1.2%;
+    position: sticky;
+    top: 200px;
 }
 
 .sidenav {
@@ -54,11 +61,18 @@ img{
   
   .sidenav .closebtn {
     position: absolute;
-    top: 0;
-    right: 25px;
+    top: 0px;
+    left: 0px;
     font-size: 36px;
-    margin-left: 50px;
-    margin-top: 100px;
+    margin-top: 60px;
+  }
+
+  .links{
+    margin-top: 30%;
+  }
+
+  #t{
+    margin-top: 40%;
   }
   
   #main {
@@ -69,7 +83,7 @@ img{
 @keyframes fadeInTop{
     0%{
         opacity: 0;
-        transform: translateY(75px);
+        transform: translateY(0px);
     }
     100%{
         opacity: 1;
@@ -80,7 +94,7 @@ img{
 @-webkit-keyframes fadeInTop{
     0%{
         opacity: 0;
-        -webkit-transform: translateY(-75px);
+        -webkit-transform: translateY(0px);
     }
     100%{
         opacity: 1;
@@ -91,7 +105,7 @@ img{
 @-moz-keyframes fadeInTop{
     0%{
         opacity: 0;
-        -moz-transform: translateY(-75px);
+        -moz-transform: translateY(px);
     }
     100%{
         opacity: 1;
@@ -102,7 +116,7 @@ img{
 @-o-keyframes fadeInTop{
     0%{
         opacity: 0;
-        -o-transform: translateY(-75px);
+        -o-transform: translateY(0px);
     }
     100%{
         opacity: 1;
@@ -115,6 +129,10 @@ img{
 }
 
 #intro{
+    margin-bottom: 250px;
+}
+
+#text2{
     margin-bottom: 250px;
 }
 
