--- a/styles/aboutUs.css
+++ b/styles/aboutUs.css
@@ -4,13 +4,83 @@ div #start{
     text-align: center;
 }
 
+.animated{
+    visibility: hidden;
+}
+
+.fadeInTop{
+    animation: fadeInTop 1.5s both;
+    -webkit-animation: fadeInTop 1.5s both;
+    -moz-animation: fadeInTop 1.5s both;
+    -o-animation: fadeInTop 1.5s both;
+    visibility: visible;
+}
+
+@keyframes fadeInTop{
+    0%{
+        opacity: 0;
+        transform: translateY(0px);
+    }
+    100%{
+        opacity: 1;
+        transform: translateY(0px);
+    }
+}
+
+@-webkit-keyframes fadeInTop{
+    0%{
+        opacity: 0;
+        -webkit-transform: translateY(0px);
+    }
+    100%{
+        opacity: 1;
+        -webkit-transform: translateY(0px);
+    }
+}
+
+@-moz-keyframes fadeInTop{
+    0%{
+        opacity: 0;
+        -moz-transform: translateY(0px);
+    }
+    100%{
+        opacity: 1;
+        -moz-transform: translateY(0px);
+    }
+}
+
+@-o-keyframes fadeInTop{
+    0%{
+        opacity: 0;
+        -o-transform: translateY(0px);
+    }
+    100%{
+        opacity: 1;
+        -o-transform: translateY(0px);
+    }
+}
+
 #arrow{
     width: 100px;
     margin-bottom: 100px;
 }
 
+.name{
+    color: black;
+    text-decoration: none;
+}
+
+.name:hover{
+    text-decoration: underline;
+    color: black;
+}
+
+#head{
+    margin-top: 1em;
+}
+
 .profile{
-    border: solid black 1px;
+    border-bottom: solid black 1px;
 }
 
 footer{
